--- a/public/dpms/index.html
+++ b/public/dpms/index.html
@@ -39,7 +39,7 @@
   <meta itemprop="wordCount" content="144">
   <meta itemprop="image" content="https://docs.lcna.cn/images/og-image.png"></head>
 <body><div class="container"><header>
-<h1>LCNA Docs</h1><span class="version">Version 25.03.4</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
+<h1>LCNA Docs</h1><span class="version">Version 25.04.1</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
 <p class="description">由LCNA构建的在线知识库</p>
 
 </header>
@@ -98,6 +98,17 @@ Published on 7 Mar 2025
 <li class=""><a href="https://docs.lcna.cn/dps/prs/">开创铁路系统 PRS</a>
   
 <ul class="sub-menu">
+<li class=""><a href="https://docs.lcna.cn/dps/prs/s_line/">连接线</a></li>
+<li class=""><a href="https://docs.lcna.cn/dps/prs/road/">公路&amp;大道</a></li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/">Railway 铁路</a>
+  
+<ul class="sub-menu">
+<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
+</ul>
+  
+</li>
+<li class=""><a href="https://docs.lcna.cn/dps/prs/h_line/">地狱快速</a></li>
 </ul>
   
 </li>
