--- a/public/dps/regions/index.html
+++ b/public/dps/regions/index.html
@@ -37,7 +37,7 @@
   <meta itemprop="wordCount" content="31">
   <meta itemprop="image" content="https://docs.lcna.cn/images/og-image.png"></head>
 <body><div class="container"><header>
-<h1>LCNA Docs</h1><span class="version">Version 25.03.4</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
+<h1>LCNA Docs</h1><span class="version">Version 25.04.1</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
 <p class="description">由LCNA构建的在线知识库</p>
 
 </header>
@@ -60,7 +60,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS%5cRegions%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/prs/s_line/" title="连接线"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 连接线</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS%5cRegions%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/prs/h_line/" title="地狱快速"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 地狱快速</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/dps/regions/new/" title="其他区域">Next - 其他区域 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -86,6 +86,8 @@ Published on 17 Oct 2017
 <li class=""><a href="https://docs.lcna.cn/dps/prs/">开创铁路系统 PRS</a>
   
 <ul class="sub-menu">
+<li class=""><a href="https://docs.lcna.cn/dps/prs/s_line/">连接线</a></li>
+<li class=""><a href="https://docs.lcna.cn/dps/prs/road/">公路&amp;大道</a></li>
 
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/">Railway 铁路</a>
   
@@ -94,9 +96,7 @@ Published on 17 Oct 2017
 </ul>
   
 </li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/road/">公路&amp;大道</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/h_line/">地狱快速</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/s_line/">连接线</a></li>
 </ul>
   
 </li>
