--- a/public/about/index.html
+++ b/public/about/index.html
@@ -114,7 +114,7 @@ Published on 7 Mar 2025
   
 <ul class="sub-menu">
 
-<li class=""><a href="https://docs.lcna.cn/dps/regions/new/">其他区域</a>
+<li class=""><a href="https://docs.lcna.cn/dps/regions/qd/">启东</a>
   
 </li>
 
@@ -123,6 +123,14 @@ Published on 7 Mar 2025
 </li>
 
 <li class=""><a href="https://docs.lcna.cn/dps/regions/bhw/">滨海湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/wb/">西湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/lm/">龙门</a>
   
 </li>
 </ul>
