--- a/public/dps/history/index.html
+++ b/public/dps/history/index.html
@@ -156,7 +156,7 @@ Last updated on 8 Mar 2025
 
 <br>
 Published on 8 Mar 2025
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS%5cHistory%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/" title="DPS文档"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - DPS文档</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS/History/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/" title="DPS文档"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - DPS文档</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/dps/plan/" title="发展规划">Next - 发展规划 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -203,7 +203,7 @@ Published on 8 Mar 2025
   
 <ul class="sub-menu">
 
-<li class=""><a href="https://docs.lcna.cn/dps/regions/new/">其他区域</a>
+<li class=""><a href="https://docs.lcna.cn/dps/regions/qd/">启东</a>
   
 </li>
 
@@ -212,6 +212,14 @@ Published on 8 Mar 2025
 </li>
 
 <li class=""><a href="https://docs.lcna.cn/dps/regions/bhw/">滨海湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/wb/">西湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/lm/">龙门</a>
   
 </li>
 </ul>
