--- a/public/works/poem/index.html
+++ b/public/works/poem/index.html
@@ -59,7 +59,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Works%5cpoem%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/works/" title="Zhisheng&#39;s 作品"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Zhisheng&#39;s 作品</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Works/poem/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/works/" title="Zhisheng&#39;s 作品"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Zhisheng&#39;s 作品</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/works/poem/nblyx/" title="南北连一线">Next - 南北连一线 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -106,7 +106,7 @@ Published on 17 Oct 2017
   
 <ul class="sub-menu">
 
-<li class=""><a href="https://docs.lcna.cn/dps/regions/new/">其他区域</a>
+<li class=""><a href="https://docs.lcna.cn/dps/regions/qd/">启东</a>
   
 </li>
 
@@ -115,6 +115,14 @@ Published on 17 Oct 2017
 </li>
 
 <li class=""><a href="https://docs.lcna.cn/dps/regions/bhw/">滨海湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/wb/">西湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/lm/">龙门</a>
   
 </li>
 </ul>
