--- a/public/transmit/index.html
+++ b/public/transmit/index.html
@@ -37,7 +37,7 @@
   <meta itemprop="wordCount" content="98">
   <meta itemprop="image" content="https://docs.lcna.cn/images/og-image.png"></head>
 <body><div class="container"><header>
-<h1>LCNA Docs</h1><span class="version">Version 25.05.1</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
+<h1>LCNA Docs</h1><span class="version">Version 25.06.1</span><a href="https://github.com/Zhisheng666" class="github"><i class="fab fa-github"></i></a>
 <p class="description">由LCNA构建的在线知识库</p>
 
 </header>
@@ -67,7 +67,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Transmit/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/regions/lm/" title="龙门"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 龙门</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Transmit/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/regions/nt/" title="新界"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 新界</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/transmit/metro/" title="地铁">Next - 地铁 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -114,15 +114,15 @@ Published on 17 Oct 2017
   
 <ul class="sub-menu">
 
-<li class=""><a href="https://docs.lcna.cn/dps/regions/qd/">启东</a>
-  
-</li>
-
-<li class=""><a href="https://docs.lcna.cn/dps/regions/nt/">新界</a>
-  
-</li>
-
 <li class=""><a href="https://docs.lcna.cn/dps/regions/bhw/">滨海湾</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/lm/">龙门</a>
+  
+</li>
+
+<li class=""><a href="https://docs.lcna.cn/dps/regions/qd/">启东</a>
   
 </li>
 
@@ -130,7 +130,7 @@ Published on 17 Oct 2017
   
 </li>
 
-<li class=""><a href="https://docs.lcna.cn/dps/regions/lm/">龙门</a>
+<li class=""><a href="https://docs.lcna.cn/dps/regions/nt/">新界</a>
   
 </li>
 </ul>
@@ -197,8 +197,8 @@ Published on 17 Oct 2017
 <li class=""><a href="https://docs.lcna.cn/works/poem/">诗歌/Poem</a>
   
 <ul class="sub-menu">
-<li class=""><a href="https://docs.lcna.cn/works/poem/nblyx/">南北连一线</a></li>
 <li class=""><a href="https://docs.lcna.cn/works/poem/bhwp/">滨海湾畔</a></li>
+<li class=""><a href="https://docs.lcna.cn/works/poem/nblyx/">南北连一线</a></li>
 </ul>
   
 </li>
