--- a/public/works/poem/bhwp/index.html
+++ b/public/works/poem/bhwp/index.html
@@ -95,7 +95,7 @@ Last updated on 8 Mar 2025
 
 <br>
 Published on 8 Mar 2025
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Works/poem/bhwp.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/works/poem/" title="诗歌/Poem"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 诗歌/Poem</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Works%5cpoem%5cbhwp.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/works/poem/" title="诗歌/Poem"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 诗歌/Poem</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/works/poem/nblyx/" title="南北连一线">Next - 南北连一线 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -129,7 +129,6 @@ Published on 8 Mar 2025
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
