--- a/public/dps/plan/index.html
+++ b/public/dps/plan/index.html
@@ -67,7 +67,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS/Plan/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/history/" title="历史沿革"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 历史沿革</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS%5cPlan%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/history/" title="历史沿革"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 历史沿革</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/dps/prs/" title="开创铁路系统 PRS">Next - 开创铁路系统 PRS <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -101,7 +101,6 @@ Published on 17 Oct 2017
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
