--- a/public/dps/prs/h_line/index.html
+++ b/public/dps/prs/h_line/index.html
@@ -63,7 +63,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS/PRS/H_Line.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/prs/railways/3/" title="Railway #3 南横线"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Railway #3 南横线</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/DPS%5cPRS%5cH_Line.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/dps/prs/railways/2/" title="Railway #2 滨城线"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - Railway #2 滨城线</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/dps/regions/" title="行政区划">Next - 行政区划 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -97,7 +97,6 @@ Published on 17 Oct 2017
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
