--- a/public/it/lcna_devices/index.html
+++ b/public/it/lcna_devices/index.html
@@ -74,7 +74,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/IT/LCNA_Devices.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/it/ns/" title="网络&amp;存储"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 网络&amp;存储</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/IT%5cLCNA_Devices.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/it/ns/" title="网络&amp;存储"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 网络&amp;存储</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/medicine/" title="医学/Medicine">Next - 医学/Medicine <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -108,7 +108,6 @@ Published on 17 Oct 2017
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
