--- a/public/medicine/psychology/zrjs/index.html
+++ b/public/medicine/psychology/zrjs/index.html
@@ -144,7 +144,7 @@ Last updated on 26 Apr 2025
 
 <br>
 Published on 26 Apr 2025
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Medicine/Psychology/zrjs.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/medicine/psychology/" title="心理/Psychology"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 心理/Psychology</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Medicine%5cPsychology%5czrjs.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/medicine/psychology/" title="心理/Psychology"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 心理/Psychology</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/works/" title="Zhisheng&#39;s 作品">Next - Zhisheng&#39;s 作品 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -178,7 +178,6 @@ Published on 26 Apr 2025
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
