--- a/public/transmit/metro/index.html
+++ b/public/transmit/metro/index.html
@@ -59,7 +59,7 @@ Last updated on 17 Oct 2017
 
 <br>
 Published on 17 Oct 2017
-<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Transmit/Metro/_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/transmit/" title="交通"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 交通</a>
+<br><a href="https://github.com/thingsym/hugo-theme-techdoc/edit/master/Transmit%5cMetro%5c_index.md" class="edit-page"><i class="fas fa-pen-square"></i>&nbsp;Edit on GitHub</a></div><nav class="pagination"><a class="nav nav-prev" href="https://docs.lcna.cn/transmit/" title="交通"><i class="fas fa-arrow-left" aria-hidden="true"></i>&nbsp;Prev - 交通</a>
 <a class="nav nav-next" href="https://docs.lcna.cn/transmit/metro/dg/" title="东莞轨道交通">Next - 东莞轨道交通 <i class="fas fa-arrow-right" aria-hidden="true"></i></a>
 </nav><footer><p class="powered">Powered by <a href="https://gohugo.io">Hugo</a>. Theme by <a href="https://themes.gohugo.io/hugo-theme-techdoc/">TechDoc</a>. Designed by <a href="https://github.com/thingsym/hugo-theme-techdoc">Thingsym</a>.</p>
 </footer>
@@ -93,7 +93,6 @@ Published on 17 Oct 2017
 <ul class="sub-menu">
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/1/">Railway #1 西铁线</a></li>
 <li class=""><a href="https://docs.lcna.cn/dps/prs/railways/2/">Railway #2 滨城线</a></li>
-<li class=""><a href="https://docs.lcna.cn/dps/prs/railways/3/">Railway #3 南横线</a></li>
 </ul>
   
 </li>
